--- a/receiptRecognition/shopperHelper/templates/shopperHelper/selectItems.html
+++ b/receiptRecognition/shopperHelper/templates/shopperHelper/selectItems.html
@@ -62,7 +62,9 @@
             </tbody>
           <!-- </form> -->
           </table>
-          <button id="submitButton" class="btn btn-outline-success btn-lg btn-block" onclick="sendPostData()" type="submit">Submit</button>
+          <p><a href="{% url 'summary' %}" class="btn btn-outline-primary">Submit</a></p>
+
+          <!-- <button id="submitButton" class="btn btn-outline-success btn-lg btn-block" onclick="sendPostData()" type="submit">Submit</button> -->
           <!-- s<button id="submitButton" class="btn btn-outline-success btn-lg btn-block" type="submit">Submit</button> -->
       </form>
         </div>
