Makes some minor aesthetic changes and add picture

--- a/receiptRecognition/shopperHelper/templates/shopperHelper/addReceipt.html
+++ b/receiptRecognition/shopperHelper/templates/shopperHelper/addReceipt.html
@@ -47,7 +47,7 @@
           <label for="username">Group Assigned</label> {{ receiptForm.group_Assigned }}
         </div>
       </div>
-      <input type="submit" class="btn btn-success" role="button" value="Submit" />
+      <input type="submit" class="btn btn-outline-success" role="button" value="Submit" />
     </form>
 
     <br>
