--- a/receiptRecognition/shopperHelper/templates/shopperHelper/create_group.html
+++ b/receiptRecognition/shopperHelper/templates/shopperHelper/create_group.html
@@ -27,7 +27,7 @@
     <form method="post">
       {% csrf_token %}
       {{ groupForm.as_p }}
-      <button type="submit" class="btn btn-success btn-large btn-block" role = "button">Create Group</button>
+      <button type="submit" class="btn btn-outline-success btn-large btn-block" role = "button">Create Group</button>
     </form>
 </div>
       <!-- <div class="form-row"> -->
