--- a/receiptRecognition/shopperHelper/templates/shopperHelper/login.html
+++ b/receiptRecognition/shopperHelper/templates/shopperHelper/login.html
@@ -39,7 +39,9 @@
   {% endif %}
 
     <div class="jumbotron">
-      <h1>Welcome to the Splitty <strong>(DRS)</strong></h1>
+        <img src="../../static/shopperHelper/logo/splittyLogo.png" alt="It's Litty" style="width:20%;">
+      <!-- <h1>Welcome to the Splitty <strong>(DRS)</strong></h1> -->
+      <h1><strong>Welcome to the Splitty</strong></h1>
       <p class="lead">Automate your receipt splitting process now!</p>
     </div>
 
@@ -52,7 +54,7 @@
           <label for="formGroupExampleInput">Type Phone Number</label> {{ form.login_form_data }}
         </div>
       </div>
-      <button type="submit" class="btn btn-primary" role="button">Submit</a>
+      <button type="submit" class="btn btn-outline-success" role="button">Submit</a>
       </form>
     </div>
     {% endblock %}
