Removed extra submit button

--- a/receiptRecognition/shopperHelper/templates/shopperHelper/addReceipt.html
+++ b/receiptRecognition/shopperHelper/templates/shopperHelper/addReceipt.html
@@ -33,11 +33,12 @@
 
            <div class="custom-file">
              <!-- <input type="file" class="custom-file-input" id="customFile"> -->
-             {{ receiptForm.image }}
+             
              <div>
                 <div class="fileinput fileinput-new" data-provides="fileinput">
+				{{ receiptForm.image }}
                     <!-- <span class="btn btn-default btn-file"><input type="file" onclick="document.getElementById('selectedFile').click();" /></span> -->
-                    <span class="fileinput-filename"><input type="file" onclick="document.getElementById('selectedFile').click();" /></span>
+                    <!-- <span class="fileinput-filename"><input type="file" onclick="document.getElementById('selectedFile').click();" /></span> -->
                     <!-- <span class="fileinput-filename"></span> -->
                 </div>
              </div>
